# SignProcessing

./: .gitignore  CMakeLists.txt  Configs.h.in  README.md  README.sh  cmake.sh  models.qrc
data/input/: README.md  predicts.txt
data/output/: 1.xml  2.xml  3.xml  4.xml  5.xml  README.txt
demo/: CMakeLists.txt
demo/AnnMlpDemo/: CMakeLists.txt  main.cpp
demo/CmdBatchTrainDemo/: CMakeLists.txt  main.cpp
demo/LetterRecogDemo/: CMakeLists.txt  README.md  main.cpp
demo/MLPDemo/: CMakeLists.txt  main.cpp
demo/SignClassifierDemo/: CMakeLists.txt  main.cpp
demo/SignCutterDemo/: CMakeLists.txt  main.cpp
demo/SignProcessorDemo/: CMakeLists.txt  main.cpp
demo/SignTransformerDemo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/MLP/: CMakeLists.txt  MLP.cpp  MLP.h
src/SignClassifier/: CMakeLists.txt  SignClassifier.cpp  SignClassifier.h  SignClassifier.pro  SignClassifier.ui
src/SignCutter/: CMakeLists.txt  SelectionView.cpp  SelectionView.h  SignCutter.cpp  SignCutter.h  SignCutter.ui
src/SignLogger/: CMakeLists.txt  SignLogger.cpp  SignLogger.h
src/SignProcessor/: CMakeLists.txt  SignProcessor.cpp  SignProcessor.h  SignProcessor.ui
src/SignTransformer/: CMakeLists.txt  SignTransformer.cpp  SignTransformer.h  SignTransformer.pro  SignTransformer.ui  ThirdPartyUtils.h
src/Utils/: CMakeLists.txt  Config.h  Utils.cpp  Utils.h
